// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/notifications.ts should handle LOGOUT 1`] = `
Object {
  "failed": false,
  "isFetching": false,
  "response": Array [],
}
`;

exports[`reducers/notifications.ts should handle MARK_NOTIFICATION.SUCCESS - enterprise 1`] = `
Object {
  "failed": false,
  "isFetching": false,
  "response": Array [
    Object {
      "hostname": "github.gitify.io",
      "notifications": Array [
        Object {
          "id": "3",
          "last_read_at": "2017-05-20T14:20:55Z",
          "reason": "subscribed",
          "repository": Object {
            "description": null,
            "fork": false,
            "full_name": "myorg/notifications-test",
            "html_url": "https://github.gitify.io/myorg/notifications-test",
            "id": 1,
            "name": "notifications-test",
            "owner": Object {
              "avatar_url": "https://github.gitify.io/avatars/u/4?",
              "events_url": "https://github.gitify.io/api/v3/users/myorg/events{/privacy}",
              "followers_url": "https://github.gitify.io/api/v3/users/myorg/followers",
              "following_url": "https://github.gitify.io/api/v3/users/myorg/following{/other_user}",
              "gists_url": "https://github.gitify.io/api/v3/users/myorg/gists{/gist_id}",
              "gravatar_id": "",
              "html_url": "https://github.gitify.io/myorg",
              "id": 4,
              "login": "myorg",
              "organizations_url": "https://github.gitify.io/api/v3/users/myorg/orgs",
              "received_events_url": "https://github.gitify.io/api/v3/users/myorg/received_events",
              "repos_url": "https://github.gitify.io/api/v3/users/myorg/repos",
              "site_admin": false,
              "starred_url": "https://github.gitify.io/api/v3/users/myorg/starred{/owner}{/repo}",
              "subscriptions_url": "https://github.gitify.io/api/v3/users/myorg/subscriptions",
              "type": "Organization",
              "url": "https://github.gitify.io/api/v3/users/myorg",
            },
            "private": true,
          },
          "subject": Object {
            "latest_comment_url": "https://github.gitify.io/api/v3/repos/myorg/notifications-test/issues/comments/21",
            "title": "Bump Version",
            "type": "PullRequest",
            "url": "https://github.gitify.io/api/v3/repos/myorg/notifications-test/pulls/3",
          },
          "subscription_url": "https://github.gitify.io/api/v3/notifications/threads/3/subscription",
          "unread": true,
          "updated_at": "2017-05-20T15:52:20Z",
          "url": "https://github.gitify.io/api/v3/notifications/threads/3",
        },
      ],
    },
  ],
}
`;

exports[`reducers/notifications.ts should handle MARK_NOTIFICATION.SUCCESS - github.com 1`] = `
Object {
  "failed": false,
  "isFetching": false,
  "response": Array [
    Object {
      "hostname": "github.com",
      "notifications": Array [
        Object {
          "id": "148827438",
          "last_read_at": "2017-05-20T16:59:03Z",
          "reason": "author",
          "repository": Object {
            "description": null,
            "fork": false,
            "full_name": "manosim/notifications-test",
            "html_url": "https://github.com/manosim/notifications-test",
            "id": 57216596,
            "name": "notifications-test",
            "owner": Object {
              "avatar_url": "https://avatars0.githubusercontent.com/u/6333409?v=3",
              "events_url": "https://api.github.com/users/manosim/events{/privacy}",
              "followers_url": "https://api.github.com/users/manosim/followers",
              "following_url": "https://api.github.com/users/manosim/following{/other_user}",
              "gists_url": "https://api.github.com/users/manosim/gists{/gist_id}",
              "gravatar_id": "",
              "html_url": "https://github.com/manosim",
              "id": 6333409,
              "login": "manosim",
              "organizations_url": "https://api.github.com/users/manosim/orgs",
              "received_events_url": "https://api.github.com/users/manosim/received_events",
              "repos_url": "https://api.github.com/users/manosim/repos",
              "site_admin": false,
              "starred_url": "https://api.github.com/users/manosim/starred{/owner}{/repo}",
              "subscriptions_url": "https://api.github.com/users/manosim/subscriptions",
              "type": "User",
              "url": "https://api.github.com/users/manosim",
            },
            "private": true,
          },
          "subject": Object {
            "latest_comment_url": "https://api.github.com/repos/manosim/notifications-test/issues/comments/302885965",
            "title": "Improve the UI",
            "type": "Issue",
            "url": "https://api.github.com/repos/manosim/notifications-test/issues/4",
          },
          "subscription_url": "https://api.github.com/notifications/threads/148827438/subscription",
          "unread": true,
          "updated_at": "2017-05-20T17:06:34Z",
          "url": "https://api.github.com/notifications/threads/148827438",
        },
      ],
    },
  ],
}
`;

exports[`reducers/notifications.ts should handle MARK_REPO_NOTIFICATION.SUCCESS - enterprise 1`] = `
Object {
  "failed": false,
  "isFetching": false,
  "response": Array [
    Object {
      "hostname": "github.gitify.io",
      "notifications": Array [],
    },
  ],
}
`;

exports[`reducers/notifications.ts should handle MARK_REPO_NOTIFICATION.SUCCESS - github.com 1`] = `
Object {
  "failed": false,
  "isFetching": false,
  "response": Array [
    Object {
      "hostname": "github.gitify.io",
      "notifications": Array [],
    },
  ],
}
`;

exports[`reducers/notifications.ts should handle NOTIFICATIONS.FAILURE 1`] = `
Object {
  "failed": true,
  "isFetching": false,
  "response": Array [],
}
`;

exports[`reducers/notifications.ts should handle NOTIFICATIONS.REQUEST 1`] = `
Object {
  "failed": false,
  "isFetching": true,
  "response": Array [],
}
`;

exports[`reducers/notifications.ts should handle NOTIFICATIONS.SUCCESS 1`] = `
Object {
  "failed": false,
  "isFetching": false,
  "response": Array [],
}
`;

exports[`reducers/notifications.ts should handle NOTIFICATIONS.SUCCESS 2`] = `
Object {
  "failed": false,
  "isFetching": false,
  "response": Array [
    Object {
      "id": "138661096",
      "last_read_at": "2017-05-20T17:06:51Z",
      "reason": "subscribed",
      "repository": Object {
        "archive_url": "https://api.github.com/repos/manosim/notifications-test/{archive_format}{/ref}",
        "assignees_url": "https://api.github.com/repos/manosim/notifications-test/assignees{/user}",
        "blobs_url": "https://api.github.com/repos/manosim/notifications-test/git/blobs{/sha}",
        "branches_url": "https://api.github.com/repos/manosim/notifications-test/branches{/branch}",
        "collaborators_url": "https://api.github.com/repos/manosim/notifications-test/collaborators{/collaborator}",
        "comments_url": "https://api.github.com/repos/manosim/notifications-test/comments{/number}",
        "commits_url": "https://api.github.com/repos/manosim/notifications-test/commits{/sha}",
        "compare_url": "https://api.github.com/repos/manosim/notifications-test/compare/{base}...{head}",
        "contents_url": "https://api.github.com/repos/manosim/notifications-test/contents/{+path}",
        "contributors_url": "https://api.github.com/repos/manosim/notifications-test/contributors",
        "deployments_url": "https://api.github.com/repos/manosim/notifications-test/deployments",
        "description": "Test Repository",
        "downloads_url": "https://api.github.com/repos/manosim/notifications-test/downloads",
        "events_url": "https://api.github.com/repos/manosim/notifications-test/events",
        "fork": false,
        "forks_url": "https://api.github.com/repos/manosim/notifications-test/forks",
        "full_name": "manosim/notifications-test",
        "git_commits_url": "https://api.github.com/repos/manosim/notifications-test/git/commits{/sha}",
        "git_refs_url": "https://api.github.com/repos/manosim/notifications-test/git/refs{/sha}",
        "git_tags_url": "https://api.github.com/repos/manosim/notifications-test/git/tags{/sha}",
        "hooks_url": "https://api.github.com/repos/manosim/notifications-test/hooks",
        "html_url": "https://github.com/manosim/notifications-test",
        "id": 57216596,
        "issue_comment_url": "https://api.github.com/repos/manosim/notifications-test/issues/comments{/number}",
        "issue_events_url": "https://api.github.com/repos/manosim/notifications-test/issues/events{/number}",
        "issues_url": "https://api.github.com/repos/manosim/notifications-test/issues{/number}",
        "keys_url": "https://api.github.com/repos/manosim/notifications-test/keys{/key_id}",
        "labels_url": "https://api.github.com/repos/manosim/notifications-test/labels{/name}",
        "languages_url": "https://api.github.com/repos/manosim/notifications-test/languages",
        "merges_url": "https://api.github.com/repos/manosim/notifications-test/merges",
        "milestones_url": "https://api.github.com/repos/manosim/notifications-test/milestones{/number}",
        "name": "notifications-test",
        "node_id": "MDEwOlJlcG9zaXRvcnkzNjAyOTcwNg==",
        "notifications_url": "https://api.github.com/repos/manosim/notifications-test/notifications{?since,all,participating}",
        "owner": Object {
          "avatar_url": "https://avatars0.githubusercontent.com/u/6333409?v=3",
          "events_url": "https://api.github.com/users/manosim/events{/privacy}",
          "followers_url": "https://api.github.com/users/manosim/followers",
          "following_url": "https://api.github.com/users/manosim/following{/other_user}",
          "gists_url": "https://api.github.com/users/manosim/gists{/gist_id}",
          "gravatar_id": "",
          "html_url": "https://github.com/manosim",
          "id": 6333409,
          "login": "manosim",
          "node_id": "MDQ6VXNlcjYzMzM0MDk=",
          "organizations_url": "https://api.github.com/users/manosim/orgs",
          "received_events_url": "https://api.github.com/users/manosim/received_events",
          "repos_url": "https://api.github.com/users/manosim/repos",
          "site_admin": false,
          "starred_url": "https://api.github.com/users/manosim/starred{/owner}{/repo}",
          "subscriptions_url": "https://api.github.com/users/manosim/subscriptions",
          "type": "User",
          "url": "https://api.github.com/users/manosim",
        },
        "private": true,
        "pulls_url": "https://api.github.com/repos/manosim/notifications-test/pulls{/number}",
        "releases_url": "https://api.github.com/repos/manosim/notifications-test/releases{/id}",
        "stargazers_url": "https://api.github.com/repos/manosim/notifications-test/stargazers",
        "statuses_url": "https://api.github.com/repos/manosim/notifications-test/statuses/{sha}",
        "subscribers_url": "https://api.github.com/repos/manosim/notifications-test/subscribers",
        "subscription_url": "https://api.github.com/repos/manosim/notifications-test/subscription",
        "tags_url": "https://api.github.com/repos/manosim/notifications-test/tags",
        "teams_url": "https://api.github.com/repos/manosim/notifications-test/teams",
        "trees_url": "https://api.github.com/repos/manosim/notifications-test/git/trees{/sha}",
        "url": "https://api.github.com/manosim/notifications-test",
      },
      "subject": Object {
        "latest_comment_url": "https://api.github.com/repos/manosim/notifications-test/issues/comments/302888448",
        "title": "I am a robot and this is a test!",
        "type": "Issue",
        "url": "https://api.github.com/repos/manosim/notifications-test/issues/1",
      },
      "subscription_url": "https://api.github.com/notifications/threads/138661096/subscription",
      "unread": true,
      "updated_at": "2017-05-20T17:51:57Z",
      "url": "https://api.github.com/notifications/threads/138661096",
    },
    Object {
      "id": "148827438",
      "last_read_at": "2017-05-20T16:59:03Z",
      "reason": "author",
      "repository": Object {
        "description": null,
        "fork": false,
        "full_name": "manosim/notifications-test",
        "html_url": "https://github.com/manosim/notifications-test",
        "id": 57216596,
        "name": "notifications-test",
        "owner": Object {
          "avatar_url": "https://avatars0.githubusercontent.com/u/6333409?v=3",
          "events_url": "https://api.github.com/users/manosim/events{/privacy}",
          "followers_url": "https://api.github.com/users/manosim/followers",
          "following_url": "https://api.github.com/users/manosim/following{/other_user}",
          "gists_url": "https://api.github.com/users/manosim/gists{/gist_id}",
          "gravatar_id": "",
          "html_url": "https://github.com/manosim",
          "id": 6333409,
          "login": "manosim",
          "organizations_url": "https://api.github.com/users/manosim/orgs",
          "received_events_url": "https://api.github.com/users/manosim/received_events",
          "repos_url": "https://api.github.com/users/manosim/repos",
          "site_admin": false,
          "starred_url": "https://api.github.com/users/manosim/starred{/owner}{/repo}",
          "subscriptions_url": "https://api.github.com/users/manosim/subscriptions",
          "type": "User",
          "url": "https://api.github.com/users/manosim",
        },
        "private": true,
      },
      "subject": Object {
        "latest_comment_url": "https://api.github.com/repos/manosim/notifications-test/issues/comments/302885965",
        "title": "Improve the UI",
        "type": "Issue",
        "url": "https://api.github.com/repos/manosim/notifications-test/issues/4",
      },
      "subscription_url": "https://api.github.com/notifications/threads/148827438/subscription",
      "unread": true,
      "updated_at": "2017-05-20T17:06:34Z",
      "url": "https://api.github.com/notifications/threads/148827438",
    },
  ],
}
`;

exports[`reducers/notifications.ts should return the initial state 1`] = `
Object {
  "failed": false,
  "isFetching": false,
  "response": Array [],
}
`;
